fixes #22
resolves the issue of the toolbar menus not showing up

--- a/css/fixes.less
+++ b/css/fixes.less
@@ -25,6 +25,22 @@ a {
   }
 }
 
+.picker {
+    z-index: 99999;
+    .pickerbutton {
+        background: white;
+        border: none;
+        margin: 0px;
+        ._shadow_1dp;
+    }
+    .toolbutton {
+        background: white;
+        border: none;
+        margin: 0px;
+        ._shadow_1dp;
+    }
+}
+
 // BELOW YOU WILL FIND MODIFIED COMPONENTS TAKEN FROM MDL.
 // 
 // Take a look at MDL here: https://getmdl.io/
